--- a/Nodejs/package.json
+++ b/Nodejs/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
   },
   "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-}
+    "start": "node main.js",
+    "dev": "nodemon server.js"
+  }
 }
